--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,13 +1,6 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:8.11.3
-
-ENV node.name=es01
-ENV bootstrap.memory_lock=false
-ENV discovery.type=single-node
-ENV xpack.security.enabled=true
-ENV xpack.security.http.ssl.enabled=false
-ENV xpack.security.transport.ssl.enabled=false
-ENV TZ=UTC
-
-EXPOSE 9200 9300
-
-CMD ["elasticsearch"]
+FROM mysql:5.7.18
+ENV MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_DATABASE=testdb
+ENV MYSQL_USER=testuser
+ENV MYSQL_PASSWORD=testpassword
+COPY data.sql /docker-entrypoint-initdb.d/
